--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "firebase": "^10.14.1",
+    "idb": "^8.0.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "workbox-precaching": "^7.4.0",
+    "workbox-routing": "^7.4.0",
+    "workbox-strategies": "^7.4.0",
+    "workbox-window": "^7.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
