feat: add landing page, user menu, install prompt, and error message handling
- Implemented a landing page with navigation, hero section, features, and call-to-action.
- Created a user menu component for account settings, theme toggling, and logout functionality.
- Added an install prompt for PWA installation with iOS and Android support.
- Introduced an error message utility to sanitize backend error codes into user-friendly messages.
- Included an SVG icon for branding.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "GYMI - AI Fitness Coach",
   "short_name": "GYMI",
   "description": "AI-powered fitness tracking with real-time form correction and progress monitoring",
-  "start_url": "/",
+  "start_url": "/home",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
@@ -42,10 +42,10 @@
       "url": "/nutrition"
     },
     {
-      "name": "View Profile",
-      "short_name": "Profile",
-      "description": "View your profile and goals",
-      "url": "/profile"
+      "name": "View Progress",
+      "short_name": "Progress",
+      "description": "View your progress and goals",
+      "url": "/progress"
     }
   ],
   "categories": ["health", "fitness"],
