Add WebSocket architecture and flow documentation for real-time exercise feedback system

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Exercise Form Correction Backend
+# Use http:// for local, https:// for production
+# The app auto-derives ws:// / wss:// for WebSocket connections
+NEXT_PUBLIC_FORM_COACH_URL=http://localhost:8000
